--- a/.github/workflows/update_algolia.yml
+++ b/.github/workflows/update_algolia.yml
@@ -5,13 +5,18 @@ jobs:
     name: Check for projects.csv updates and add records to Algolia
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
+    
     - name: Install dependencies
       run: python -m pip install --upgrade pip algoliasearch
+    
     - name: Run algolia.py
+      run: python algolia.py
       env:
         ACTIONS_KEY: ${{ secrets.KEY }}
