--- a/.github/workflows/update_algolia.yml
+++ b/.github/workflows/update_algolia.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Run algolia.py
       run: python algolia.py
       env:
-        ACTIONS_KEY: ${{ secrets.KEY }}
+        KEY: ${{ secrets.KEY }}
